<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardview_shadow_end_color"
    tools:context=".traildetail">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:backgroundTint="@color/cardview_shadow_end_color"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:expandedTitleGravity="top"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="exitUntilCollapsed">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="392dp"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="165dp"
                android:text="@string/yosemite_national_park_is_in_california_s_sierra_nevada_mountains_in_yosemite_village_are_shops_restaurants_lodging_the_yosemite_museum_and_the_ansel_adams_gallery_with_prints_of_the_photographer_s_renowned_black_and_white_landscapes_of_the_area"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:textColor="@color/black"
                app:layout_collapseMode="parallax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:text="@string/best_trails_in_yosemite_national_park"
                android:textColor="#568100"
                android:textSize="22sp"
                android:fontFamily="cursive"
                android:textStyle="bold"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/yosemite"
                tools:layout_editor_absoluteY="-8dp"
                android:contentDescription="@string/yosemite" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="270dp"
                android:numStars="5"
                android:progressTint="#FBC02D"
                android:rating="4.8"
                android:stepSize="0.1"
                android:layout_marginStart="160dp"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toTopOf="@id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.442"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="15dp">

<!--                <RelativeLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content">-->

                    <ImageView
                        android:layout_width="186dp"
                        android:layout_height="150dp"
                        android:src="@drawable/vernal"
                        android:contentDescription="@string/vernal"/>


                <TextView
                    android:id="@+id/trailname1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_1_vernal_and_nevada_falls_via_mist_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/traillevel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="80dp"
                        android:background="@color/cardview_dark_background"
                        android:text="@string/hard"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="120dp"

                        android:text="@string/length_8_8_mi_est_5h_1m"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
<!--                </RelativeLayout>-->
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:layout_width="186dp"
                    android:layout_height="150dp"
                    android:src="@drawable/upper"
                    android:contentDescription="@string/upper"/>
                <TextView
                    android:id="@+id/trailname2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_2_upper_yosemite_falls_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/traillevel1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="80dp"
                    android:background="@color/cardview_dark_background"
                    android:text="@string/hard"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="120dp"

                    android:text="@string/length_7_6_mi_est_4h_30m"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:layout_width="186dp"
                    android:layout_height="150dp"
                    android:src="@drawable/half_dome"
                    android:contentDescription="@string/haldome"/>
                <TextView
                    android:id="@+id/trailname3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_3_half_dome_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/traillevel3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="80dp"
                    android:background="@color/cardview_dark_background"
                    android:text="@string/hard"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="120dp"

                    android:text="@string/length_15_mi_est_9h_1m"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:layout_width="186dp"
                    android:layout_height="150dp"
                    android:src="@drawable/lower"
                    android:contentDescription="@string/lower" />
                <TextView
                    android:id="@+id/trailname4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_4_lower_yosemite_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/traillevel4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/easy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="120dp"

                    android:text="@string/length_1_2_mi_est_28m"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:layout_width="186dp"
                    android:layout_height="150dp"
                    android:src="@drawable/glacier"
                    android:contentDescription="@string/glacier" />
                <TextView
                    android:id="@+id/trailname5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_5_glacier_point_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/traillevel5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/easy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="120dp"

                    android:text="@string/length_0_6_mi_est_14m"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:layout_width="186dp"
                    android:layout_height="150dp"
                    android:src="@drawable/mirror"
                    android:contentDescription="@string/mirror"/>
                <TextView
                    android:id="@+id/trailname6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_6_mirror_lake_trail"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/traillevel6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/easy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="120dp"

                    android:text="@string/length_6_1_mi_est_2h_26m"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>