<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/np"
    tools:context=".Searchactivity">

    <EditText
        android:id="@+id/inputlocation"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:autofillHints=""

        android:paddingTop="0pt"
        android:foregroundTint="#B81616"
        android:hint="@string/enter_a_location"
        android:hyphenationFrequency="none"
        android:inputType="textPersonName"
        android:textColorHint="#0C848F"
        android:textSize="25sp"

        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent "
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/teal_700"

        android:onClick="viewdetails"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="#D3D2D0"
        android:textColorHint="#050404"
        android:textFontWeight="15"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/inputlocation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/find_your_next_favourite_trail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>